[gd_scene load_steps=20 format=4 uid="uid://bdn3to4813v1j"]

[ext_resource type="Script" uid="uid://b4fmcqbnvx1bq" path="res://Scene/LevelChoose/LevelChoose.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://uokr7tapqdp4" path="res://Asset/Texture/GUI/TowerDefense/Level/ChapterSelectBackground.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bc45lt788mhi6" path="res://Asset/Texture/GUI/TowerDefense/Level/Chapter1/Chapter1Building.png" id="3"]
[ext_resource type="Texture2D" uid="uid://by78fduhfu071" path="res://Asset/Texture/GUI/TowerDefense/Level/Chapter1/Chapter1Background.jpg" id="4"]
[ext_resource type="Texture2D" uid="uid://blcqu572aauda" path="res://Asset/Texture/GUI/TowerDefense/Level/LevelChooseLabel.png" id="5"]
[ext_resource type="Script" uid="uid://vhxhi2o2m4y1" path="res://Prefab/GUI/DragMenu/DragMenu.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://cdnyb8d1qw7g4" path="res://Prefab/GUI/Button/SpriteBrightButton/SpriteBrightButton.tscn" id="7"]
[ext_resource type="Shader" uid="uid://bi8x813unwm5l" path="res://Asset/Shader/ShaderBright.gdshader" id="8"]
[ext_resource type="Texture2D" uid="uid://dgviglko6y6sa" path="res://Asset/Texture/GUI/TowerDefense/Level/LevelChooseOption.png" id="9"]
[ext_resource type="FontFile" uid="uid://coqskwlqtnypf" path="res://Asset/Font/fzkt.ttf" id="10"]
[ext_resource type="Texture2D" uid="uid://ch4kmhb5r6ql0" path="res://Asset/Texture/GUI/TowerDefense/Level/Option/LevelOptionLabel.png" id="11"]
[ext_resource type="Texture2D" uid="uid://db56oxmts3wbl" path="res://Asset/Texture/GUI/TowerDefense/Level/Option/LevelOptionDifficultyNormal.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dbnlu1kk5je4j" path="res://Asset/Texture/GUI/TowerDefense/Level/Option/LevelOptionButton1.png" id="13"]
[ext_resource type="Texture2D" uid="uid://c5gfvhdjtxxfp" path="res://Asset/Texture/GUI/TowerDefense/Level/Option/LevelOptionButton.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b1alfxrjlj0i0" path="res://Asset/Texture/GUI/TowerDefense/Level/Option/LevelOptionDifficultyHard.png" id="15"]
[ext_resource type="Texture2D" uid="uid://oks7e2sbpr1o" path="res://Asset/Texture/GUI/General/General/ArrowButton.png" id="16"]
[ext_resource type="Texture2D" uid="uid://bdx1imearld07" path="res://Asset/Texture/GUI/General/General/ArrowButtonDown.png" id="17"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ngi3r"]
shader = ExtResource("8")
shader_parameter/brightStrength = 0.0

[sub_resource type="ButtonGroup" id="ButtonGroup_63121"]

[node name="LevelChoose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="LevelTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="LevelSelectBackground" type="TextureRect" parent="LevelTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -224.0
offset_right = 959.0
offset_bottom = 97.0001
scale = Vector2(0.7, 0.7)
texture = ExtResource("3")
expand_mode = 1

[node name="ChapterTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -600.0
offset_bottom = -601.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6

[node name="ChapterSelectBackground" type="TextureRect" parent="ChapterTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.002
anchor_bottom = 1.002
offset_left = -1.0
offset_top = -225.2
offset_right = 959.0
offset_bottom = 95.7999
scale = Vector2(0.7, 0.7)
texture = ExtResource("3")
expand_mode = 1

[node name="Camera" type="Node" parent="."]

[node name="Camera" type="Camera2D" parent="Camera"]
unique_name_in_owner = true
anchor_mode = 0

[node name="LevelChooseMarker" type="Marker2D" parent="Camera"]
unique_name_in_owner = true
position = Vector2(0, -600)

[node name="DefaultMarker" type="Marker2D" parent="Camera"]
unique_name_in_owner = true

[node name="GUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="LabelTexture" type="TextureRect" parent="GUI"]
offset_right = 531.0
offset_bottom = 203.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("5")

[node name="InformationLabel" type="Label" parent="GUI/LabelTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 491.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 48
text = "章节选择"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GUIFollow" type="CanvasLayer" parent="GUI"]
unique_name_in_owner = true
follow_viewport_enabled = true

[node name="Choose" type="Control" parent="GUI/GUIFollow"]
layout_mode = 3
anchor_top = -1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChapterMenu" type="Control" parent="GUI/GUIFollow/Choose"]
unique_name_in_owner = true
physics_interpolation_mode = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 19.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6")
scaleBase = Vector2(0.6, 0.6)
scaleDecrease = 0.25
metadata/_custom_type_script = "uid://vhxhi2o2m4y1"

[node name="LevelMenu" type="Control" parent="GUI/GUIFollow/Choose"]
unique_name_in_owner = true
physics_interpolation_mode = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -608.0
offset_bottom = -608.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6")
alphaDecrease = 0.4
scaleBase = Vector2(1, 1)
scaleDecrease = 0.4
metadata/_custom_type_script = "uid://vhxhi2o2m4y1"

[node name="OptionButton" parent="GUI" instance=ExtResource("7")]
material = SubResource("ShaderMaterial_ngi3r")
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -137.0
offset_right = -24.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture = ExtResource("9")
autoSize = true

[node name="Button" parent="GUI/OptionButton/Transform" index="0"]
offset_left = 0.0
offset_top = 0.0
offset_right = 135.0
offset_bottom = 131.0

[node name="Label" type="Label" parent="GUI/OptionButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.8333
offset_top = 129.333
offset_right = 64.1664
offset_bottom = 186.333
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 48
text = "设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionGUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 5
visible = false

[node name="LevelTexture" type="TextureRect" parent="OptionGUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="ChapterSelectBackground" type="TextureRect" parent="OptionGUI/LevelTexture"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -224.0
offset_right = 959.0
offset_bottom = 97.0001
scale = Vector2(0.7, 0.7)
texture = ExtResource("3")
expand_mode = 1

[node name="LevelOptionLabelTexture" type="TextureRect" parent="OptionGUI/LevelTexture"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_right = 0.508
offset_left = -259.64
offset_top = 18.0
offset_right = 433.36
offset_bottom = 113.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("11")

[node name="LevelOptionLabel" type="Label" parent="OptionGUI/LevelTexture/LevelOptionLabelTexture"]
layout_mode = 0
offset_left = 130.667
offset_top = 9.33333
offset_right = 557.667
offset_bottom = 84.3333
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "控制台"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Difficult" type="Control" parent="OptionGUI/LevelTexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultLabel" type="Label" parent="OptionGUI/LevelTexture/Difficult"]
layout_mode = 0
offset_left = -563.0
offset_top = -197.0
offset_right = -136.0
offset_bottom = -122.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "难度选择:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NormalTexture" type="TextureRect" parent="OptionGUI/LevelTexture/Difficult"]
layout_mode = 0
offset_left = -243.0
offset_top = -211.0
offset_right = -87.0
offset_bottom = -33.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("12")

[node name="NormalButton" type="TextureButton" parent="OptionGUI/LevelTexture/Difficult/NormalTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 178.667
offset_right = 205.0
offset_bottom = 265.667
scale = Vector2(0.75, 0.75)
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_63121")
texture_normal = ExtResource("13")
texture_pressed = ExtResource("14")
texture_hover = ExtResource("14")
stretch_mode = 0

[node name="NormalLabel" type="Label" parent="OptionGUI/LevelTexture/Difficult/NormalTexture/NormalButton"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.88889
offset_top = 8.88889
offset_right = 193.889
offset_bottom = 70.8889
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "正常"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultTexture" type="TextureRect" parent="OptionGUI/LevelTexture/Difficult"]
layout_mode = 0
offset_left = -113.0
offset_top = -202.0
offset_right = 69.0
offset_bottom = -35.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("15")

[node name="DifficultButton" type="TextureButton" parent="OptionGUI/LevelTexture/Difficult/DifficultTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.6666
offset_top = 166.667
offset_right = 231.667
offset_bottom = 253.667
scale = Vector2(0.75, 0.75)
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_63121")
texture_normal = ExtResource("13")
texture_pressed = ExtResource("14")
texture_hover = ExtResource("14")
stretch_mode = 0

[node name="DifficultLabel" type="Label" parent="OptionGUI/LevelTexture/Difficult/DifficultTexture/DifficultButton"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 12.0
offset_right = 190.0
offset_bottom = 69.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "困难"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrontGUI" type="CanvasLayer" parent="."]
layer = 10

[node name="BackButton" type="TextureButton" parent="FrontGUI"]
unique_name_in_owner = true
anchors_preset = -1
anchor_top = 1.002
anchor_bottom = 1.002
offset_left = 14.0
offset_top = -88.2001
offset_right = 115.0
offset_bottom = 9.79993
scale = Vector2(0.75, 0.75)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("16")
texture_pressed = ExtResource("17")
texture_hover = ExtResource("17")
stretch_mode = 0

[connection signal="pressed" from="GUI/OptionButton" to="." method="OptionButtonPressed"]
[connection signal="pressed" from="OptionGUI/LevelTexture/Difficult/NormalTexture/NormalButton" to="." method="DifficultChange"]
[connection signal="pressed" from="OptionGUI/LevelTexture/Difficult/DifficultTexture/DifficultButton" to="." method="DifficultChange"]
[connection signal="pressed" from="FrontGUI/BackButton" to="." method="Back"]

[editable path="GUI/OptionButton"]
